@@ -99,7 +99,7 @@ PF_VALUE       = PF_STRING
 PF_COLOR       = PDB_COLOR
 PF_COLOUR      = PF_COLOR
 PF_REGION      = PDB_REGION
-#PF_DISPLAY     = PDB_DISPLAY
+PF_DISPLAY     = PDB_DISPLAY
 PF_IMAGE       = PDB_IMAGE
 PF_LAYER       = PDB_LAYER
 PF_CHANNEL     = PDB_CHANNEL
@@ -140,6 +140,7 @@ _type_mapping = {
     #PF_STRINGARRAY : PDB_STRINGARRAY,
     PF_COLOR       : PDB_COLOR,
     PF_REGION      : PDB_REGION,
+    PF_DISPLAY     : PDB_DISPLAY,
     PF_IMAGE       : PDB_IMAGE,
     PF_LAYER       : PDB_LAYER,
     PF_CHANNEL     : PDB_CHANNEL,
@@ -175,6 +176,7 @@ _obj_mapping = {
     #PF_STRINGARRAY : list,
     PF_COLOR       : gimpcolor.RGB,
     PF_REGION      : int,
+    PF_DISPLAY     : gimp.Display,
     PF_IMAGE       : gimp.Image,
     PF_LAYER       : gimp.Layer,
     PF_CHANNEL     : gimp.Channel,
